# syn-search

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: azure-static-web-apps-delightful-grass-0b4be1603.yml  azure-static-web-apps-gentle-desert-02bc78d03.yml  azure-static-web-apps-proud-water-0f0a39703.yml  ochoung-web_app_syn-search-api-2.yml  ochoung-web_app_syn-search-api.yml  web_app_syn-search-app.yml
data/: val.json
data/index/I20160920.index/: index_store.json
dummy/: data_resources.md
llama-index/I20160920.index/: index_store.json
notes/: azure-app.md  quick_references.md
scripts/: env_backend.yaml  env_data.yaml  env_model.yaml  xml2json.sh
src/backend/: main.py  models.py  requirements.txt  scratch.py  settings.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.svelte  app.css
src/model/: index_builder.py
src/preprocessing/: README.md  annotator.py  filter_reactant_fg.py  pyproject.toml
src/preprocessing/src/syn_data/: annotator.py  index_builder.py  index_playground.py  path.py  test_llms.py
src/preprocessing/src/syn_data/asset/: funcgroups_list.csv
